# fastapi-clean-template-ng

./: .gitignore  Pipfile  README.md  pyproject.toml  run.py
.run/: run + hr.run.xml  run no hr.run.xml
configs/: Environment.py
services/: AuthorService.py  BookService.py
