[project]
name = "fastapi-clean-template-ng"
version = "0.1.0"
authors = [
    {name = "M.B.J. Donners", email = "532486@student.fontys.nl"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.35",
    "mysqlclient>=2.2.4",
    "uvicorn>=0.30.6; sys_platform != 'win32'",
    "winloop>=0.1.6; sys_platform == 'win32'",
    "uvloop>=0.20.0; sys_platform != 'win32'",
    "python-dotenv>=1.0.1",
    "strawberry-graphql[fastapi]>=0.242.0",
    "psycopg2>=2.9.9",
    "pydantic-settings>=2.5.2"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "strawberry-graphql[debug-server]>=0.242.0"
]

[project.scripts]
run = "python run.py"

[tool.black]
line-length = 60

[tool.isort]
profile = "black"
src_paths = [
    "configs",
    "core",
    "dependencies",
    "models",
    "repositories",
    "routers",
    "schemas",
    "services"
]
virtual_env = "env"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["__tests__"]